--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget12/stats-widget12.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget12/stats-widget12.component.html
@@ -11,8 +11,8 @@
                                         <br>
                                         <div class="row">
                                             <div class="col col-md-3 col-lg-3">
-                                                <label class="labelMargin" for="detailerOutletName">Partner Outlet
-                                                    Name</label>
+                                                <label class="labelMargin" for="detailerOutletName"><b>Partner Outlet
+                                                    Name</b></label>
                                             </div>
                                             <div class="col col-md-6 col-lg-6">
                                                 <input class="form-control" formControlName="companyName"
@@ -24,7 +24,7 @@
                                         <br>
                                         <div class="row">
                                             <div class="col col-md-3 col-lg-3">
-                                                <label class="labelMargin">Partner Name</label>
+                                                <label class="labelMargin"><b>Partner Name</b></label>
                                             </div>
                                             <div class="col col-md-3 col-lg-3">
                                                 <input class="form-control" formControlName="firstName"
@@ -41,8 +41,8 @@
                                         <br>
                                         <div class="row">
                                             <div class="col col-md-3 col-lg-3">
-                                                <label class="labelMargin">Mobile Number of
-                                                    Partner</label>
+                                                <label class="labelMargin"><b>Mobile Number of
+                                                    Partner</b></label>
                                             </div>
                                             <div class="col col-md-3 col-lg-3">
                                                 <input class="form-control" formControlName="phone1" type="number"
@@ -64,8 +64,8 @@
 
                                         <div class="row">
                                             <div class="col col-md-3 col-lg-3">
-                                                <label class="labelMargin" for="emailIdOfDealer">Email Id of
-                                                    Dealer</label>
+                                                <label class="labelMargin" for="emailIdOfDealer"><b>Email Id of
+                                                    Dealer</b></label>
                                             </div>
                                             <div class="col col-md-3 col-lg-3">
                                                 <input type="email" class="form-control" formControlName="email"
@@ -79,7 +79,7 @@
                                         <br>
                                         <div class="row">
                                             <div class="col col-md-3 col-lg-3">
-                                                <label class="labelMargin" for="oilCompany">Oil Company</label>
+                                                <label class="labelMargin" for="oilCompany"><b>Oil Company</b></label>
                                             </div>
                                             <div class="col col-md-6 col-lg-6">
 
@@ -97,7 +97,7 @@
 
                                     <div class="col-md-2" style="text-align: center;">
                                         <div class="row">
-                                            <a style="color: blue;"> Logo </a>
+                                            <a style="color: blue;"> <b>Logo </b></a>
                                         </div>
                                         <br>
                                         <div class="row" style="text-align: right;">
@@ -127,14 +127,14 @@
                                             <div class="col-md-4"> </div>
                                             <div class="col-md-12" style="margin-left:15px !important">
                                                 <b>
-                                                    <h3>Address Details</h3>
+                                                    <h3><b>Address Details</b></h3>
                                                 </b>
                                             </div>
                                         </div>
                                         <br>
                                         <div class="row" style="width:900px;margin-left:15px !important">
                                             <div class="col-md-4">
-                                                <label>Address Line 1:</label>
+                                                <label><b>Address Line 1:</b></label>
                                                 <input class="form-control" placeholder="Enter Address Line 1"
                                                     formControlName="address1"
                                                     oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);">
@@ -142,14 +142,14 @@
                                             <div class="col-md-4">
 
 
-                                                <label>Address Line 2:</label>
+                                                <label><b>Address Line 2:</b></label>
                                                 <input class="form-control" placeholder="Enter Address Line 2"
                                                     formControlName="address2"
                                                     oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);">
                                             </div>
 
                                             <div class="col-md-4">
-                                                <label class="labelMargin">City Area:</label>
+                                                <label class="labelMargin"><b>City Area:</b></label>
 
                                                 <input class="form-control" placeholder="Enter City Area"
                                                     formControlName="cityArea"
@@ -161,14 +161,14 @@
                                         <br>
                                         <div class="row" style="width:900px;margin-left:15px !important">
                                             <div class="col-md-4">
-                                                <label class="labelMargin">City:</label>
+                                                <label class="labelMargin"><b>City:</b></label>
 
                                                 <input class="form-control" placeholder="Enter City"
                                                     formControlName="city"
                                                     oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);">
                                             </div>
                                             <div class="col-md-4">
-                                                <label class="labelMargin">District:</label>
+                                                <label class="labelMargin"><b>District:</b></label>
 
                                                 <input class="form-control" placeholder="Enter District"
                                                     formControlName="dist"
@@ -176,7 +176,7 @@
                                             </div>
 
                                             <div class="col-md-4">
-                                                <label class="labelMargin">State:</label>
+                                                <label class="labelMargin"><b>State:</b></label>
                                                 <select class="form-control" style="color: #9EA79E;"
                                                     formControlName="state" required placeholder="Select state">
                                                     <option value="">Select State</option>
@@ -227,7 +227,7 @@
                                         <div class="row" style="width:900px;margin-left:15px !important">
 
                                             <div class="col-md-3">
-                                                <label class="labelMargin">PIN Code:</label>
+                                                <label class="labelMargin"><b>PIN Code:</b></label>
                                                 <input class="form-control" formControlName="pin" type="number"
                                                     placeholder="Enter PIN Code" maxlength="6"
                                                     onkeypress="return this.value.length < 6;"
@@ -237,7 +237,7 @@
 
 
                                             <div class="col-md-3">
-                                                <label class="labelMargin">Geo Location:</label>
+                                                <label class="labelMargin"><b>Geo Location:</b></label>
 
                                                 <button type="submit" class="btn btn-sm" style="color: blue"
                                                     (click)="getGeoLocation()">
@@ -248,7 +248,7 @@
                                             </div>
 
                                             <div class="col-md-3">
-                                                <label class="labelMargin">Phone Number:</label>
+                                                <label class="labelMargin"><b>Phone Number:</b></label>
 
                                                 <input class="form-control" formControlName="phone2"
                                                     placeholder="Enter Phone Number"
@@ -257,7 +257,7 @@
                                             </div>
 
                                             <div class="col-md-3">
-                                                <label class="labelMargin">NH/SH No:</label>
+                                                <label class="labelMargin"><b>NH/SH No:</b></label>
 
                                                 <input class="form-control" placeholder="Enter NH/SH No"
                                                     formControlName="highwayNumber"
@@ -281,7 +281,7 @@
                                         <br>
                                         <div class="row" style="width:900px;margin-left:15px !important">
                                             <div class="col-md-4">
-                                                <label class="labelMargin">Business Type:</label>
+                                                <label class="labelMargin"><b>Business Type:</b></label>
                                                 <select class="form-control" formControlName="businessType">
                                                     <option value="">Select Type</option>
                                                     <option value="Proprietorship">Proprietorship</option>
@@ -296,14 +296,14 @@
                                             </div>
 
                                             <div class="col-md-4">
-                                                <label class="labelMargin">GST Number:</label>
+                                                <label class="labelMargin"><b>GST Number:</b></label>
                                                 <input class="form-control" formControlName="GSTNumber"
                                                     placeholder="Enter GST Number" maxlength="15"
                                                     oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);">
                                             </div>
 
                                             <div class="col-md-4">
-                                                <label class="labelMargin">Unique Code Assigned:</label>
+                                                <label class="labelMargin"><b>Unique Code Assigned:</b></label>
                                                 <input class="form-control" formControlName="uniqueCodeAssigned"
                                                     placeholder="Enter Unique Code"
                                                     oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);">
@@ -312,14 +312,14 @@
                                         <br>
                                         <div class="row" style="width:900px;margin-left:15px !important">
                                             <div class="col-md-4">
-                                                <label class="labelMargin">Business PAN Name:</label>
+                                                <label class="labelMargin"><b>Business PAN Name:</b></label>
                                                 <input class="form-control" formControlName="businessPanName"
                                                     placeholder="Enter PAN Name"
                                                     oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);">
                                             </div>
 
                                             <div class="col-md-4">
-                                                <label class="labelMargin">Business PAN Number:</label>
+                                                <label class="labelMargin"><b>Business PAN Number:</b></label>
                                                 <input class="form-control" formControlName="businessPancardNumber"
                                                     placeholder="Enter PAN Number " maxlength="10"
                                                     oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);">
