--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget17/tables-widget17.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget17/tables-widget17.component.html
@@ -61,15 +61,15 @@
     <div class="table-responsive mb-0">
         <table class="table table-centered">
             <thead class="table-light">
-                <tr class="fw-bolder text-muted bg-light">
+                <tr class="fw-bolder bg-light">
                     <th> </th>
-                    <th>Veels ID</th>
-                    <th>Mapped Date</th>
-                    <th>Company Name</th>
-                    <th>Oil Company</th>
-                    <th>Owner Name</th>
-                    <th>Contact Number</th>
-                    <th>Action</th>
+                    <th><b>Veels ID</b></th>
+                    <th><b>Mapped Date</b></th>
+                    <th><b>Company Name</b></th>
+                    <th><b>Oil Company</b></th>
+                    <th><b>Owner Name</b></th>
+                    <th><b>Contact Number</b></th>
+                    <th><b>Action</b></th>
                 </tr>
             </thead>
             <tbody
@@ -121,12 +121,12 @@
                             </thead>
                             <tbody>
                                 <tr class="fw-bolder text-muted bg-light">
-                                    <th>Email Id</th>
-                                    <th>GST</th>
-                                    <th>City</th>
-                                    <th>State</th>
-                                    <th>PIN Code</th>
-                                    <th>Customize</th>
+                                    <th><b>Email Id</b></th>
+                                    <th><b>GST</b></th>
+                                    <th><b>City</b></th>
+                                    <th><b>State</b></th>
+                                    <th><b>PIN Code</b></th>
+                                    <th><b>Customize</b></th>
                                 </tr>
                                 <tr>
                                     <td>{{data.email1}}</td>
@@ -153,12 +153,12 @@
                                 </tr>
 
                                 <tr class="fw-bolder text-muted bg-light">
-                                    <th>Onboarding Status</th>
-                                    <th>Accept</th>
-                                    <th>Decline</th>
-                                    <th>Active Pump</th>
-                                    <th>Door Step Delivery</th>
-                                    <th>Remove Dealer</th>
+                                    <th><b>Onboarding Status</b></th>
+                                    <th><b>Accept</b></th>
+                                    <th><b>Decline</b></th>
+                                    <th><b>Active Pump</b></th>
+                                    <th><b>Door Step Delivery</b></th>
+                                    <th><b>Remove Dealer</b></th>
 
                                 </tr>
                                 <tr>
