--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget18/tables-widget18.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget18/tables-widget18.component.html
@@ -71,16 +71,16 @@
     <div class="table-responsive mb-0">
         <table class="table table-centered">
             <thead class="table-light">
-                <tr class="fw-bolder text-muted bg-light">
+                <tr class="fw-bolder bg-light">
                     <th> </th>
-                    <th>Veels ID</th>
-                    <th>Mapped Date</th>
-                    <th>Company Name</th>
-                    <th>Oil Company</th>
-                    <th>Owner Name</th>
-                    <th>Contact Number</th>
-                    <th>Action</th>
-                    <th>Tax Invoice</th>
+                    <th><b>Veels ID</b></th>
+                    <th><b>Mapped Date</b></th>
+                    <th><b>Company Name</b></th>
+                    <th><b>Oil Company</b></th>
+                    <th><b>Owner Name</b></th>
+                    <th><b>Contact Number</b></th>
+                    <th><b>Action</b></th>
+                    <th><b>Tax Invoice</b></th>
                 </tr>
             </thead>
             <tbody
@@ -140,12 +140,12 @@
                             </thead>
                             <tbody>
                                 <tr class="fw-bolder text-muted bg-light">
-                                    <th>Email Id</th>
-                                    <th>GST</th>
-                                    <th>City</th>
-                                    <th>State</th>
-                                    <th>PIN Code</th>
-                                    <th>Onboarding Status</th>
+                                    <th><b>Email Id</b></th>
+                                    <th><b>GST</b></th>
+                                    <th><b>City</b></th>
+                                    <th><b>State</b></th>
+                                    <th><b>PIN Code</b></th>
+                                    <th><b>Onboarding Status</b></th>
 
                                 </tr>
                                 <tr>
@@ -158,12 +158,12 @@
                                 </tr>
 
                                 <tr class="fw-bolder text-muted bg-light">
-                                    <th>Offline Payment</th>
-                                    <th>Waive Off Status</th>
-                                    <th>SMS Status</th>
-                                    <th>Email Status</th>
-                                    <th>Active Pump</th>
-                                    <th>CR SMS</th>
+                                    <th><b>Offline Payment</b></th>
+                                    <th><b>Waive Off Status</b></th>
+                                    <th><b>SMS Status</b></th>
+                                    <th><b>Email Status</b></th>
+                                    <th><b>Active Pump</b></th>
+                                    <th><b>CR SMS</b></th>
 
                                 </tr>
                                 <tr>
