--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget19/tables-widget19.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget19/tables-widget19.component.html
@@ -60,13 +60,13 @@
                 <thead class="table-light">
                     <tr>
                         <th></th>
-                        <th>Veels ID</th>
-                        <th>Mapped Date</th>
-                        <th>Company Name</th>
-                        <th>Oil Company</th>
-                        <th>Owner Name</th>
-                        <th>Contact Number</th>
-                        <th>Action</th>
+                        <th><b>Veels ID</b></th>
+                        <th><b>Mapped Date</b></th>
+                        <th><b>Company Name</b></th>
+                        <th><b>Oil Company</b></th>
+                        <th><b>Owner Name</b></th>
+                        <th><b>Contact Number</b></th>
+                        <th><b>Action</b></th>
                     </tr>
                 </thead>
 
@@ -118,11 +118,11 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <th>Email Id</th>
-                                        <th>GST</th>
-                                        <th>City</th>
-                                        <th>State</th>
-                                        <th>PIN Code</th>
+                                        <th><b>Email Id</b></th>
+                                        <th><b>GST</b></th>
+                                        <th><b>City</b></th>
+                                        <th><b>State</b></th>
+                                        <th><b>PIN Code</b></th>
                                     </tr>
                                     <tr>
                                         <td>{{data.email1}}</td>
