--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget20/tables-widget20.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget20/tables-widget20.component.html
@@ -72,14 +72,14 @@
             <table class="table table-centered">
                 <thead class="table-light">
                     <tr>
-                        <th style="text-align: left;"> Veels ID </th>
-                        <th style="text-align: left;"> Mapped Date </th>
-                        <th style="text-align: left;"> Company Name</th>
-                        <th style="text-align: left;"> Owner Name </th>
-                        <th style="text-align: left;"> Contact Number </th>
-                        <th style="text-align: left;"> SMS Status </th>
-                        <th style="text-align: left;"> CR SMS </th>
-                        <th style="text-align: left;"> OS SMS </th>
+                        <th style="text-align: left;"><b> Veels ID </b></th>
+                        <th style="text-align: left;"><b> Mapped Date </b></th>
+                        <th style="text-align: left;"><b> Company Name</b></th>
+                        <th style="text-align: left;"><b> Owner Name </b></th>
+                        <th style="text-align: left;"><b> Contact Number </b></th>
+                        <th style="text-align: left;"><b> SMS Status </b></th>
+                        <th style="text-align: left;"><b> CR SMS </b></th>
+                        <th style="text-align: left;"><b> OS SMS </b></th>
                         <!-- <th style="text-align: left;"> Email Status </th> -->
 
                     </tr>
