--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget21/tables-widget21.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget21/tables-widget21.component.html
@@ -4,14 +4,14 @@
             <table class="table table-centered">
                 <thead class="table-light">
                     <tr>
-                        <th style="text-align: left;"> Veels ID </th>
-                        <th style="text-align: left;"> Mapped Date </th>
-                        <th style="text-align: left;"> Company Name</th>
-                        <th style="text-align: left;"> Oil Company </th>
-                        <th style="text-align: left;"> Owner Name </th>
-                        <th style="text-align: left;"> Contact Number </th>
-                        <th style="text-align: left;"> Accept </th>
-                        <th style="text-align: left;"> Decline </th>
+                        <th style="text-align: left;"><b> Veels ID </b></th>
+                        <th style="text-align: left;"><b> Mapped Date </b></th>
+                        <th style="text-align: left;"><b> Company Name</b></th>
+                        <th style="text-align: left;"><b> Oil Company </b></th>
+                        <th style="text-align: left;"><b> Owner Name </b></th>
+                        <th style="text-align: left;"><b> Contact Number </b></th>
+                        <th style="text-align: left;"><b> Accept </b></th>
+                        <th style="text-align: left;"><b> Decline </b></th>
 
                     </tr>
                 </thead>
