--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget23/tables-widget23.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget23/tables-widget23.component.html
@@ -59,15 +59,15 @@
             <table class="table table-centered">
                 <thead class="table-light">
                     <tr>
-                        <th style="text-align: left;">Sr. No</th>
-                        <th style="text-align: left;">Created At</th>
-                        <th style="text-align: left;">Dealer Name</th>
-                        <th style="text-align: left;">Dealer Number</th>
-                        <th style="text-align: left;">Request Date & Time</th>
-                        <th style="text-align: left;">Contact Number</th>
-                        <th style="text-align: left;">Status</th>
-                        <th style="text-align: left;">Remark</th>
-                        <th style="text-align: left;">Action</th>
+                        <th style="text-align: left;"><b>Sr. No</b></th>
+                        <th style="text-align: left;"><b>Created At</b></th>
+                        <th style="text-align: left;"><b>Dealer Name</b></th>
+                        <th style="text-align: left;"><b>Dealer Number</b></th>
+                        <th style="text-align: left;"><b>Request Date & Time</b></th>
+                        <th style="text-align: left;"><b>Contact Number</b></th>
+                        <th style="text-align: left;"><b>Status</b></th>
+                        <th style="text-align: left;"><b>Remark</b></th>
+                        <th style="text-align: left;"><b>Action</b></th>
                     </tr>
                 </thead>
                 <tbody
