--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget24/tables-widget24.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget24/tables-widget24.component.html
@@ -17,13 +17,13 @@
             <table class="table table-centered">
                 <thead class="table-light">
                     <tr>
-                        <th>Veels ID</th>
-                        <th>Mapped Date</th>
-                        <th>Company Name</th>
-                        <th>Oil Company</th>
-                        <th>Owner Name</th>
-                        <th>Contact Number</th>
-                        <th>Active Pump</th>
+                        <th><b>Veels ID</b></th>
+                        <th><b>Mapped Date</b></th>
+                        <th><b>Company Name</b></th>
+                        <th><b>Oil Compan</b>y</th>
+                        <th><b>Owner Name</b></th>
+                        <th><b>Contact Number</b></th>
+                        <th><b>Active Pump</b></th>
                     </tr>
                 </thead>
 
