--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget26/tables-widget26.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget26/tables-widget26.component.html
@@ -32,12 +32,12 @@
                             <table class="table table-centered table-nowrap">
                                 <thead class="table-light">
                                     <tr>
-                                        <th style="text-align: left;">Sr No</th>
-                                        <th style="text-align: left;">Brand Name</th>
-                                        <th style="text-align: left;">Product Category</th>
-                                        <th style="text-align: left;">Product Code</th>
-                                        <th style="text-align: left;">Product Name</th>
-                                        <th style="text-align: left;">Edit</th>
+                                        <th style="text-align: left;"><b>Sr No</b></th>
+                                        <th style="text-align: left;"><b>Brand Name</b></th>
+                                        <th style="text-align: left;"><b>Product Category</b></th>
+                                        <th style="text-align: left;"><b>Product Code</b></th>
+                                        <th style="text-align: left;"><b>Product Name</b></th>
+                                        <th style="text-align: left;"><b>Edit</b></th>
                                     </tr>
                                 </thead>
 
@@ -80,7 +80,7 @@
 
                                                 <div class="row">
                                                     <div class="col-md-2">
-                                                        <label class="labelMargin" for="vendorId">Brand Name</label>
+                                                        <label class="labelMargin" for="vendorId"><b>Brand Name</b></label>
                                                     </div>
                                                     <div class="col-md-4">
                                                         <input class="form-control" formControlName="brandName"
@@ -89,8 +89,8 @@
                                                     </div>
 
                                                     <div class="col-md-2">
-                                                        <label class="labelMargin" for="detailerOutletName">Product
-                                                            Category</label>
+                                                        <label class="labelMargin" for="detailerOutletName"><b>Product
+                                                            Category</b></label>
                                                     </div>
                                                     <div class="col-md-4">
                                                         <select class="form-control" formControlName="productCategory">
@@ -104,8 +104,8 @@
                                                 <br>
                                                 <div class="row">
                                                     <div class="col-md-2">
-                                                        <label class="labelMargin" for="keyPersonName">Product
-                                                            Name</label>
+                                                        <label class="labelMargin" for="keyPersonName"><b>Product
+                                                            Name</b></label>
                                                     </div>
                                                     <div class="col-md-4">
                                                         <input class="form-control" placeholder="Enter Product Name"
@@ -114,8 +114,8 @@
                                                     </div>
 
                                                     <div class="col-md-2">
-                                                        <label class="labelMargin" for="keyPersonNumber">Product
-                                                            Code</label>
+                                                        <label class="labelMargin" for="keyPersonNumber"><b>Product
+                                                            Code</b></label>
                                                     </div>
                                                     <div class="col-md-4">
                                                         <input class="form-control" placeholder="Enter Product Code"
@@ -159,7 +159,7 @@
 
                             <div class="row">
                                 <div class="col-lg-2">
-                                    <label for="example-text-input" class="col-form-label">Oil Company</label>
+                                    <label for="example-text-input" class="col-form-label"><b>Oil Company</b></label>
                                 </div>
                                 <div class="col-lg-10">
                                     <input class="form-control" formControlName="brandName"
@@ -171,7 +171,7 @@
 
                             <div class="row">
                                 <div class="col-lg-2">
-                                    <label for="example-text-input" class="col-form-label">Product Category</label>
+                                    <label for="example-text-input" class="col-form-label"><b>Product Category</b></label>
                                 </div>
                                 <div class="col-lg-10">
                                     <select class="form-control" formControlName="productCategory">
@@ -187,7 +187,7 @@
 
                             <div class="row">
                                 <div class="col-lg-2">
-                                    <label for="example-text-input" class="col-form-label">Product Name</label>
+                                    <label for="example-text-input" class="col-form-label"><b>Product Name</b></label>
                                 </div>
                                 <div class="col-lg-10">
                                     <input class="form-control" placeholder="Enter Product Name"
@@ -199,7 +199,7 @@
 
                             <div class="row">
                                 <div class="col-lg-2">
-                                    <label for="example-text-input" class="col-form-label">Product Code</label>
+                                    <label for="example-text-input" class="col-form-label"><b>Product Code</b></label>
                                 </div>
                                 <div class="col-lg-10">
                                     <input class="form-control" placeholder="Enter Product Code"
