--- a/src/app/_metronic/partials/content/widgets/advance-tables/advance-tables-widget5/advance-tables-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/advance-tables/advance-tables-widget5/advance-tables-widget5.component.html
@@ -23,12 +23,12 @@
                             <table class="table table-centered table-nowrap">
                                 <thead class="table-light">
                                     <tr>
-                                        <th class="align-left">Tag Id</th>
-                                        <th class="align-left">Barcode</th>
-                                        <th class="align-left">Tag Class</th>
-                                        <th class="align-left">Veels Id</th>
-                                        <th class="align-left">Vehicle Number</th>
-                                        <th class="align-left">Assign To</th>
+                                        <th class="align-left"><b>Tag Id</b></th>
+                                        <th class="align-left"><b>Barcode</b></th>
+                                        <th class="align-left"><b>Tag Class</b></th>
+                                        <th class="align-left"><b>Veels Id</b></th>
+                                        <th class="align-left"><b>Vehicle Number</b></th>
+                                        <th class="align-left"><b>Assign To</b></th>
                                     </tr>
                                 </thead>
                                 <tbody *ngFor="let Fastag of fastagVichleDataKit | paginate: { itemsPerPage: 10, currentPage: p, totalItems: total }; let i = index">
