--- a/src/app/_metronic/partials/content/widgets/advance-tables/advance-tables-widget6/advance-tables-widget6.component.html
+++ b/src/app/_metronic/partials/content/widgets/advance-tables/advance-tables-widget6/advance-tables-widget6.component.html
@@ -4,8 +4,9 @@
         <div class="col-12">
             <div class="card">
                 <div class="card-header">
+                    <br>
                     <div class="row">
-                        <div class="col-auto">
+                        <div class="col-auto" style="margin-left: 0%;">
                             <button type="submit" class="btn btn-sm btn-success" (click)="addEntity(entity)">
                                 add Entity
                             </button>
@@ -18,12 +19,12 @@
                     <table class="table table-hover table-striped">
                         <thead>
                             <tr>
-                                <th>SNo.</th>
-                                <th>Entity Name</th>
-                                <th>Entity Status</th>
-                                <th>Entity Created At</th>
-                                <th>Entity Created By</th>
-                                <th>Action</th>
+                                <th><b>SNo.</b></th>
+                                <th><b>Entity Name</b></th>
+                                <th><b>Entity Status</b></th>
+                                <th><b>Entity Created At</b></th>
+                                <th><b>Entity Created By</b></th>
+                                <th><b>Action</b></th>
                             </tr>
                         </thead>
                         <tbody
@@ -54,7 +55,7 @@
             <ng-template #entity let-c="close" let-d="dismiss">
                 <div class="modal-header">
                     <h4 class="modal-title">
-                        add entity for API
+                        Add Entity for API
                     </h4>
                     <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
                         <span aria-hidden="true">&times;</span>
